fix: add Html5 DOCTYPE tag according to rule 2.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Todo App</title>
@@ -37,7 +38,7 @@
       </ul>
       <h3>Completed</h3>
       <ul id="completed-tasks">
-      <li>
+	    <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
