--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="task-list">
+      <p id="top-section">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
@@ -19,7 +19,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplet">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -37,7 +37,7 @@
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed">
 	    <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
