--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="header">
+    <aside class="header">
       <img class="logo" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="tasks-list">
+    </aside>
+    <main class="tasks-list">
       <p id="top-section">
         <label class="label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
@@ -46,7 +46,7 @@
           <button class="delete btn"><img class="del-img" src="./remove.svg"></button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
