--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="page">
     <aside class="header">
-      <img class="logo" src="./eisenhower-matrix.jpg">
+      <img class="logo" alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </aside>
     <main class="tasks-list">
@@ -26,14 +26,14 @@
           <input class="task inp-elem" type="text">
           <button class="edit btn">Edit</button>
           <button class="delete btn">
-          <img class="del-img" src="./remove.svg"></button>
+          <img class="del-img" alt="Remove" src="./remove.svg"></button>
         </li>
         <li class="edit-mode task-list-elem">
           <input  class="inp-elem" type="checkbox">
           <label class="task label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task inp-elem">
           <button class="edit btn">Save</button>
-          <button class="delete btn"><img class="del-img" src="./remove.svg"></button>
+          <button class="delete btn"><img class="del-img" alt="Remove" src="./remove.svg"></button>
         </li>
       </ul>
       <h3 class="heading">Completed</h3>
@@ -43,7 +43,7 @@
           <label class="task label">See the Doctor</label>
           <input type="text" class="task inp-elem">
           <button class="edit btn">Edit</button>
-          <button class="delete btn"><img class="del-img" src="./remove.svg"></button>
+          <button class="delete btn"><img class="del-img" alt="Remove" src="./remove.svg"></button>
         </li>
       </ul>
     </main>
