--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body class="page">
     <aside class="header">
-      <img class="logo" alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__scheme" alt="Eisenhower matrix" src="./eisenhower-matrix.jpg">
+      <a class="header__inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </aside>
     <main class="tasks-list">
       <p id="top-section">
@@ -20,7 +20,7 @@
       </p>
       <h3 class="heading">Todo</h3>
       <ul class="task-list" id="incomplet">
-        <li class="task-list-elem">
+        <li class="task-list__elem">
           <input class="inp-elem" type="checkbox">
           <label class="task label">Pay Bills</label>
           <input class="task inp-elem" type="text">
@@ -28,7 +28,7 @@
           <button class="delete btn">
           <img class="del-img" alt="Remove" src="./remove.svg"></button>
         </li>
-        <li class="edit-mode task-list-elem">
+        <li class="task-list__edit task-list__elem">
           <input  class="inp-elem" type="checkbox">
           <label class="task label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task inp-elem">
@@ -38,7 +38,7 @@
       </ul>
       <h3 class="heading">Completed</h3>
       <ul class="task-list" id="completed">
-	    <li class="task-list-elem">
+	    <li class="task-list__elem">
           <input class="inp-elem" type="checkbox" checked>
           <label class="task label">See the Doctor</label>
           <input type="text" class="task inp-elem">
